<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRequest">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/skillsLabel"
        app:layout_constraintTop_toBottomOf="@+id/skillsLabel">

        <TextView
            android:id="@+id/reqTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/request_title_label"
            app:layout_constraintBottom_toTopOf="@+id/titleInputLayout"
            app:layout_constraintStart_toStartOf="@+id/titleInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="4dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:layout_constraintBottom_toTopOf="@+id/summaryInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Request_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_title_hint"
                android:onClick="onClick" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/reqSummaryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/request_summary_label"
            app:layout_constraintBottom_toTopOf="@+id/summaryInputLayout"
            app:layout_constraintStart_toStartOf="@+id/summaryInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/summaryInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="4dp"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:layout_constraintBottom_toTopOf="@+id/firstDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Request_Summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_summary_hint"
                android:isScrollContainer="true"
                android:onClick="onClick"
                android:scrollIndicators="left"
                android:scrollbars="horizontal"
                android:scrollHorizontally="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/firstDate"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="#4BE91E63"
            android:ems="8"
            android:hint="@string/start_date"
            android:onClick="onClick"
            android:paddingTop="5dp"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/skillsLabel"
            app:layout_constraintEnd_toStartOf="@+id/secondDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summaryInputLayout" />

        <!--        <Switch-->
        <!--            android:id="@+id/switchRemote"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="51dp"-->
        <!--            android:layout_marginEnd="40dp"-->
        <!--            android:text="Remote"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/secondDate"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:background="#7003A9F4"
            android:ems="8"
            android:hint="@string/end_date"
            android:onClick="onClick"
            android:paddingTop="5dp"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/firstDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/firstDate" />

        <TextView
            android:id="@+id/skillsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#8BC34A"
            android:padding="8dp"
            android:text="@string/skills"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/skill1"
            app:layout_constraintEnd_toStartOf="@+id/addSkills"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstDate" />

        <TextView
            android:id="@+id/skill1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/attachPhoto"
            app:layout_constraintEnd_toStartOf="@+id/skill2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skillsLabel" />

        <TextView
            android:id="@+id/skill2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/skill1"
            app:layout_constraintEnd_toStartOf="@+id/skill3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/skill1" />

        <TextView
            android:id="@+id/skill3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/skill2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/skill2" />

        <TextView
            android:id="@+id/attachPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/attach_photo_label"
            android:textColor="#9C27B0"
            app:layout_constraintBottom_toTopOf="@+id/reqPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skill1" />

        <ImageView
            android:id="@+id/reqPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/createReq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attachPhoto"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/createReq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:onClick="onClick"
            android:text="@string/create_request"
            app:layout_constraintBottom_toTopOf="@+id/cancelReq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reqPhoto" />

        <Button
            android:id="@+id/cancelReq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClick"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createReq" />

        <ImageButton
            android:id="@+id/addSkills"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="true"
            android:contentDescription="TODO"
            android:cropToPadding="true"
            android:onClick="onClick"
            android:padding="0dp"
            app:layout_constraintEnd_toStartOf="@+id/switch1"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/skillsLabel"
            app:layout_constraintTop_toBottomOf="@+id/firstDate"
            app:srcCompat="@android:drawable/ic_input_add" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/online"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/addSkills"
            app:layout_constraintTop_toBottomOf="@+id/firstDate" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>