<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/ivProfileImageRequest"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/profile_image" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUsernameRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRelativeTimeRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="0.2"
                android:gravity="center_vertical"
                android:text="@string/statusSpinner_label"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageButton
                android:id="@+id/deleteButton"
                style="?android:attr/actionOverflowButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.05"
                android:contentDescription="@string/ellipses_icon"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescriptionRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/statusSpinnerItems"
                android:gravity="start"
                android:visibility="gone" />


        </LinearLayout>

        <ImageView
            android:id="@+id/ivRequest"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="4dp"
            android:contentDescription="@string/request_image"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"></LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/favorite_icon"
                android:src="@drawable/ic_favorite" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:text="12/30/2021"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvDateHyphen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="- "
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="12/30/2021"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>