<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginHorizontal="4dp"
                android:contentDescription="@string/profile_image" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRelativeTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12sp" />

            </LinearLayout>

<!--                 android:layout_marginLeft="4dp"
                android:layout_weight="0.1"/>


            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="shyla"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginRight="4dp"
                android:layout_weight="0.8"/>-->

            <ImageButton
                android:id="@+id/overflowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/actionOverflowButtonStyle"
                android:layout_weight="0.1"
                android:visibility="gone"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivPost"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/post_image"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/like"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:contentDescription="@string/likes_icon"
                android:src="@drawable/ic_like" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:lineHeight="30dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>